--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -4,33 +4,33 @@
 
 ### Text
 HotspotPanoramaOverlayTextImage_60F03733_12EB_CEE7_41DA_1849DD26F201.text = AUDITÓRIO
-HotspotPanoramaOverlayTextImage_7ACC5261_3669_4763_41D9_020B6EF1EB87.text = DIRETORIA
+HotspotPanoramaOverlayTextImage_9CCC5569_F269_CD63_41E0_447976BD7AA9.text = DIRETORIA
 HotspotPanoramaOverlayTextImage_5FD3403E_12EF_42E1_41D3_7D1E692FE31C.text = SALA DA BANCA
 HotspotPanoramaOverlayTextImage_5FD312BB_12E8_C7E0_41AC_168B9AEAE3D2.text = SALA DE AULA
-HotspotPanoramaOverlayTextImage_7AE2D81F_3679_C2DF_41D5_3872FF928088.text = SALA EM AULA
 HotspotPanoramaOverlayTextImage_7A8AFD5B_367B_42A7_418C_B79072AFF0F7.text = SALA EM AULA
+HotspotPanoramaOverlayTextImage_7AE2D81F_3679_C2DF_41D5_3872FF928088.text = SALA EM AULA
 
 ## Media
 
 ### Audio
 audiores_002D9256_12DB_46A1_41AE_59D3ABD3DB03.mp3Url = media/audio_1F80881A_1268_C2A1_41A8_6FAFF02EE676_pt.mp3
-audiores_7AC23C76_35A7_4361_4195_005AE70A3AB8.mp3Url = media/audio_79C6BB64_35A7_4560_41D4_DF1EB77A72E9_pt.mp3
+audiores_9C83EB45_F2A8_C6A0_41AC_881345127E12.mp3Url = media/audio_A3F18DDB_F2AF_BD5A_4182_E1DE0889A177_pt.mp3
 
 ### Image
 imlevel_61EF5491_12EB_C3A3_41B0_3A550A56E962.url = media/panorama_1E3EB40D_1269_C2A3_418E_AC47FF0E313D_HS_51s5p3l4_pt.png
 imlevel_6196B453_12EB_C2A7_41DF_E6E940E51A89.url = media/panorama_1E3EB40D_1269_C2A3_418E_AC47FF0E313D_HS_ekm0x8cu_pt.png
 imlevel_61EBF4C2_12EB_C3A0_41A6_D9F6FFF6F3EA.url = media/panorama_1E3EB40D_1269_C2A3_418E_AC47FF0E313D_HS_hdxesmk3_pt.png
+imlevel_9CEB4C60_F269_C360_41D6_ED430E6A0DF8.url = media/panorama_1E3EB40D_1269_C2A3_418E_AC47FF0E313D_HS_om2sj2pe_pt.png
 imlevel_7A76D9BB_367F_45E7_41D7_4AA25758D5CC.url = media/panorama_1E3F6173_1268_C560_41B2_4C1BF4B972D1_HS_9l5fsafn_pt.png
 imlevel_7A707991_367F_45A3_4196_A0C510435643.url = media/panorama_1E3F6173_1268_C560_41B2_4C1BF4B972D1_HS_i4dn158b_pt.png
-imlevel_606DE5FB_12F9_CD67_41CB_6CE49AF6A78A.url = media/panorama_1E3F6173_1268_C560_41B2_4C1BF4B972D1_HS_w5igf8mf_pt.png
 
 ### Title
 panorama_1E3F6173_1268_C560_41B2_4C1BF4B972D1.label = ANDARES
 panorama_1E3EB40D_1269_C2A3_418E_AC47FF0E313D.label = ANDARES
 panorama_018DE21C_12B9_C6A0_41AF_B4651CC70685.label = BIBLIOTECA
+panorama_1E01AF7A_1268_BD60_41A6_25FEFD800317.label = BIBLIOTECA
+panorama_1E3E546B_1269_4367_4162_911EA045E2D3.label = BIBLIOTECA
 panorama_1E01F934_1259_42E1_41AB_FF16E782A56C.label = BIBLIOTECA
-panorama_1E01AF7A_1268_BD60_41A6_25FEFD800317.label = BIBLIOTECA 1
-panorama_1E3E546B_1269_4367_4162_911EA045E2D3.label = BIBLIOTECA 2
 panorama_1E3EA1F7_1267_456F_41A7_6C30F4DF5E55.label = CANTINA
 panorama_1E3FB887_1267_43AF_41A6_35D8B80DF113.label = CENTRAL DE ATENDIMENTO
 panorama_1E01984E_1259_C2A1_4184_937B411622F0.label = COORDENAÇÃO
@@ -58,8 +58,8 @@ panorama_5E488C4D_15E8_C2A3_41D5_45C6F05FC0A6.label = SALA DE AULA
 panorama_1E3F16C3_1267_CFA7_417F_59FCCC450192.label = SALA DE CONVIVENCIA
 panorama_1E38FFD9_1259_DDA0_41AF_55DD958C2ABB.label = SALA DO CENTRO ACADÊMICO
 panorama_1E3EB807_1269_42AF_414B_01FC67A8DF95.label = SALA DOS PROFESSORES
-panorama_1E013E7D_1258_BF63_4170_D01D261558F2.label = SALA EM AULA 1
-panorama_1E3EBBF7_1267_456F_4199_5FAB5CECB795.label = SALA EM AULA 2
+panorama_1E3EBBF7_1267_456F_4199_5FAB5CECB795.label = SALA EM AULA
+panorama_1E013E7D_1258_BF63_4170_D01D261558F2.label = SALA EM AULA
 panorama_1E00F8F1_1258_C363_4175_06C5DCA9F0A7.label = SALA NAP/NEI
 panorama_1E3E4A3B_1269_46E7_41B0_9E31238F3368.label = SALA PROFESSORES
 
