--- a/locale/pt.txt
+++ b/locale/pt.txt
@@ -13,6 +13,7 @@ HotspotPanoramaOverlayTextImage_54440154_4179_9194_41A2_2C7BFEA10640.text = SALA
 ## Media
 
 ### Audio
+audiores_6D4FCF82_40D9_916C_4186_B5C00E70C650.mp3Url = media/audio_684AD0B4_40D8_9094_417B_BD8D13D65936_pt.mp3
 audiores_55A0ADCF_4178_F0F4_41A1_1D9A2435301C.mp3Url = media/audio_D6132FF1_C158_70AC_41E2_4B7DC528BA4E_pt.mp3
 
 ### Image
